--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "trello-to-markdown",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Fetch Trello cards and output as Markdown",
   "type": "module",
-  "main": "trello-to-markdown.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node --env-file=.env trello-to-markdown.js"
+    "generate": "node src/index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "lodash-es": "^4.17.22",
     "trello": "^0.11.0",
     "zod": "^4.3.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "globals": "^17.0.0"
   }
 }
